--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-query": "^3.39.3",
+    "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
