--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jspdf-autotable": "^3.7.1",
     "mantine-react-table": "^1.3.4",
     "react": "^17.0.2",
+    "react-animate-height": "^3.2.3",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-query": "^3.39.3",
